--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary">#FF6B35</color>
+    <color name="primary_dark">#D94F1F</color>
+    <color name="accent">#FFCC00</color>
+    <color name="background">#1A1A2E</color>
+    <color name="background_light">#16213E</color>
+    <color name="text_primary">#FFFFFF</color>
+    <color name="text_secondary">#B0B0B0</color>
 </resources>
